
  From Steven Knight:

  - SCons now enforces (with an error) that construction variables
    must have the same form as valid Python identifiers.

  - Fix man page bugs: remove duplicate AddPostAction() description;
    document no_import_lib.

  - Eliminate a dependency on the distutils.fancy_getopt module by
    copying and pasting its wrap_text() function directly.

  From Steve Leblanc:

  - Don't update the .sconsign files when run with -n.

  From David Snopek and Christoph Wiedemann

  - Fix use of the SConf subsystem with SConscriptChdir().

  From Greg Spencer

  - Check for the existence of MS Visual Studio on disk before using it,
    to avoid getting fooled by leftover junk in the registry.

  - Add support for MSVC++ .NET.

  - Add support for MS Visual Studio project files (DSP, DSW,
    SLN and VCPROJ files).



RELEASE 0.14 - Wed, 21 May 2003 05:16:32 -0500

  From Chad Austin:

  - Use .dll (not .so) for shared libraries on Cygwin; use -fPIC
    when compiling them.

  - Use 'rm' to remove files under Cygwin.

  - Add a PLATFORM variable to construction environments.

  - Remove the "platform" argument from tool specifications.

  - Propogate PYTHONPATH when running the regression tests so distutils
    can be found in non-standard locations.

  - Using MSVC long command-line linking when running Cygwin.

  - Portability fixes for a lot of tests.

  - Add a Value Node class for dependencies on in-core Python values.

  From Allen Bierbaum:

  - Pass an Environment to the Options validator method, and
    add an Options.Save() method.

  From Steve Christensen:

  - Add an optional sort function argument to the GenerateHelpText()
    Options function.

  - Evaluate the "varlist" variables when computing the signature of a
    function action.

  From Charles Crain:

  - Parse the source .java files for class names (including inner class
    names) to figure out the target .class files that will be created.
